--- a/membalancer/Makefile
+++ b/membalancer/Makefile
@@ -1,4 +1,5 @@
-KDIR ?= /usr/src/linux-5.19-rc4
+#KDIR ?= /usr/src/linux-5.19-rc4
+KDIR ?= /home/skurichi/fedora
 LIBBPF = /home/skurichi/libbpf
 CLANG ?= clang
 LLC ?= llc
