Added profiler, filters kernel samples if not required

--- a/profiler/Makefile
+++ b/profiler/Makefile
@@ -1,27 +1,18 @@
-#KDIR ?= /usr/src/linux-5.19-rc4
 KDIR ?= /home/skurichi/fedora
 LIBBPF = /home/skurichi/libbpf
 CLANG ?= clang
 LLC ?= llc
 ARCH := $(subst x86_64,x86,$(shell arch))
-MODULE   := membalancer
+MODULE   := profiler
 BIN_KERN := ${MODULE}_kern.o
 BIN_USER := ${MODULE}_user.o
-BIN_LOAD := bpf_load.o
-BIN_NUMA := ${MODULE}_numa.o
-BIN_TIER := ${MODULE}_tier.o
-BIN_TRACER := ${MODULE}_tracer.o
-GETPADDR:= getpaddr.o
-HEAP := heap.o
 LIBS  := ${LIBBPF}/src/libbpf.a -lz -lelf -lnuma -lpthread
-#DEFS = -DUSE_PAGEMAP
 #DEFS = -DCCMD_SOFTWARE_SAMPLING
 
 BPF_INCLUDE := -I. \
 	-I${KDIR}/tools/perf \
 	-I${KDIR}/tools/lib \
 	-I${KDIR}/tools/testing/selftests/bpf/ \
-	-I${LIBBPF}/src \
 	-I${LIBBPF}/include
 
 CLANG_FLAGS = -I. \
@@ -35,7 +26,6 @@ CLANG_FLAGS = -I. \
 	-I$(KDIR)/arch/$(ARCH)/include/uapi \
 	-I$(KDIR)/arch/$(ARCH)/include/generated/uapi \
 	-I$(KDIR)/tools/testing/selftests/bpf/ \
-	-I${LIBBPF}/src \
 	-D__KERNEL__ -D__BPF_TRACING__ -Wno-unused-value -Wno-pointer-sign \
 	-DCC_USING_FENTRY \
 	-D__TARGET_ARCH_$(ARCH) -Wno-compare-distinct-pointer-types \
@@ -44,36 +34,15 @@ CLANG_FLAGS = -I. \
 	-Wno-unknown-warning-option  \
 	-g -O2 -emit-llvm
 
-all:   $(BIN_KERN) \
-       ${BIN_TRACER} ${BIN_NUMA} ${BIN_TIER} \
-       ${HEAP} ${GETPADDR} ${BIN_USER}
+all:   $(BIN_KERN) ${BIN_USER}
 
 %_kern.o: %_kern.c
 	$(CLANG) $(CLANG_FLAGS) -c $< -o - -Wall| \
 		$(LLC) -march=bpf -mcpu=$(CPU) -filetype=obj -o $@
 
-getpaddr.o: getpaddr.c
-	$(CLANG) -c $<  ${BPF_INCLUDE}
-
-%_numa.o: %_numa.c
-	$(CLANG) -c $<  ${BPF_INCLUDE}
-
-%_tier.o: %_tier.c
-	$(CLANG) -c $<  ${BPF_INCLUDE}
-%_tracer.o: %_tracer.c
-	$(CLANG) -c $<  ${BPF_INCLUDE}
-
-heap.o: heap.c
-	$(CLANG) -c $<  ${BPF_INCLUDE}
-
 %_user.o: %_user.c
 	$(CLANG) \
-	./membalancer_numa.o \
-	./membalancer_tier.o \
-        ./membalancer_tracer.o \
-        ./getpaddr.o \
-        ./heap.o \
 	$<  ${BPF_INCLUDE} -o ${MODULE} \
-	${LIBS} ${DEFS} -Wall 
+	${LIBS} ${DEFS} -Wall -g
 clean:
 	rm -f *.o ${MODULE}.o ${MODULE}
