--- a/membalancer/Makefile
+++ b/membalancer/Makefile
@@ -16,7 +16,7 @@ LIBS  := ${LIBBPF}/src/libbpf.so -lz -lelf -lnuma -lpthread
 #DEFS = -DUSE_PAGEMAP
 #DEFS = -DCCMD_SOFTWARE_SAMPLING
 
-BPF_INCLUDE := -I. \
+USR_INCLUDE := -I. \
 	-I${KDIR}/tools/perf \
 	-I${KDIR}/tools/lib \
 	-I${KDIR}/tools/testing/selftests/bpf/ \
@@ -25,6 +25,7 @@ BPF_INCLUDE := -I. \
 
 CLANG_FLAGS = -I. \
 	-include $(KDIR)/include/linux/kconfig.h \
+	-I../kernel \
 	-I$(KDIR)/include \
 	-I$(KDIR)/tools/lib \
 	-I$(KDIR)/include/uapi \
@@ -52,15 +53,15 @@ all:   $(BIN_KERN) \
 		$(LLC) -march=bpf -mcpu=$(CPU) -filetype=obj -o $@
 
 getpaddr.o: getpaddr.c
-	$(CLANG) -c $<  ${BPF_INCLUDE}
+	$(CLANG) -c $<  ${USR_INCLUDE}
 
 %_numa.o: %_numa.c
-	$(CLANG) -c $<  ${BPF_INCLUDE}
+	$(CLANG) -c $<  ${USR_INCLUDE}
 
 %_tier.o: %_tier.c
-	$(CLANG) -c $<  ${BPF_INCLUDE}
+	$(CLANG) -c $<  ${USR_INCLUDE}
 %_tracer.o: %_tracer.c
-	$(CLANG) -c $<  ${BPF_INCLUDE}
+	$(CLANG) -c $<  ${USR_INCLUDE}
 
 %_user.o: %_user.c
 	$(CLANG) \
@@ -68,7 +69,7 @@ getpaddr.o: getpaddr.c
 	./membalancer_tier.o \
         ./membalancer_tracer.o \
         ./getpaddr.o \
-	$<  ${BPF_INCLUDE} -o ${MODULE} \
+	$<  ${USR_INCLUDE} -o ${MODULE} \
 	${LIBS} ${DEFS} -Wall 
 clean:
 	rm -f *.o ${MODULE}.o ${MODULE}
