Genoa code fixes, fix for a race condition in the latency collection code
Change-Id: Idbec4adb65ced4464562fc494608774341348d98

--- a/membalancer/Makefile
+++ b/membalancer/Makefile
@@ -1,6 +1,5 @@
-#KDIR ?= /usr/src/linux-5.19-rc4
-KDIR ?= /home/skurichi/fedora
-LIBBPF = /home/skurichi/libbpf
+KDIR ?= <..>/linux-5.19
+LIBBPF = <..>/libbpf
 CLANG ?= clang
 LLC ?= llc
 ARCH := $(subst x86_64,x86,$(shell arch))
