This PR contains the following:
Functional autotuning framework; selective migration of process and memory.
Code modularization and cleanup.
Fixing issues for process migration framework.
Heap buffers for BPF programs.
Change in finding 'execution cpu' and related APIs.

Change-Id: I1c5ddddc0558af8c6eac51d9dbde555f78a92109

--- a/membalancer/Makefile
+++ b/membalancer/Makefile
@@ -13,6 +13,7 @@ BIN_TRACER := ${MODULE}_tracer.o
 BIN_TRACER := ${MODULE}_tracer.o
 BIN_UTILS := ${MODULE}_utils.o
 BIN_MIGRATE := ${MODULE}_migrate.o
+HEAP_USER := heap_user.o
 PROCESS_STATS := processtats_user.o
 GETPADDR:= getpaddr.o
 LIBS  := ${LIBBPF}/src/libbpf.so -lz -lelf -lnuma -lpthread
@@ -48,7 +49,7 @@ CLANG_FLAGS = -I. \
 	-g -O2 -emit-llvm
 
 all:   $(BIN_KERN) \
-       ${BIN_TRACER} ${BIN_NUMA} ${BIN_UTILS} ${BIN_TIER} \
+       ${BIN_TRACER} ${BIN_NUMA} ${BIN_UTILS} ${BIN_TIER} ${HEAP_USER} \
        ${PROCESS_STATS} ${HEAP} ${BIN_MIGRATE} ${GETPADDR} ${BIN_USER} \
        ${HEAP} ${GETPADDR} ${BIN_USER}
 
@@ -60,18 +61,20 @@ getpaddr.o: getpaddr.c
 	$(CLANG) -c $<  ${USR_INCLUDE}
 
 processtats_user.o: processtats_user.c
-	$(CLANG) -c $<  ${USR_INCLUDE}
+	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large
 
 %_numa.o: %_numa.c
-	$(CLANG) -c $<  ${USR_INCLUDE}
+	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large
 
 %_tier.o: %_tier.c
-	$(CLANG) -c $<  ${USR_INCLUDE}
+	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large
 %_tracer.o: %_tracer.c
-	$(CLANG) -c $<  ${USR_INCLUDE}
+	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large
 %_utils.o: %_utils.c
 	$(CLANG) -c $<  ${USR_INCLUDE}
 %_migrate.o: %_migrate.c
+	$(CLANG) -c $<  ${USR_INCLUDE}
+heap_user.o: heap_user.c
 	$(CLANG) -c $<  ${USR_INCLUDE}
 
 
@@ -79,12 +82,13 @@ processtats_user.o: processtats_user.c
 	$(CLANG) \
 	./membalancer_numa.o \
 	./membalancer_tier.o \
-        ./membalancer_tracer.o \
-        ./membalancer_utils.o \
-        ./membalancer_migrate.o \
-        ./getpaddr.o \
+	./membalancer_tracer.o \
+	./membalancer_utils.o \
+	./membalancer_migrate.o \
+	./getpaddr.o \
+	./heap_user.o \
 	./processtats_user.o \
 	$<  ${USR_INCLUDE} -o ${MODULE} \
-	${LIBS} ${DEFS} -Wall 
+	${LIBS} ${DEFS} -Wall -mcmodel=large
 clean:
 	rm -f *.o ${MODULE}.o ${MODULE}
