Fixes for older kernel with no LBR support and incorrect file read
Change-Id: Ie678df2811414fd6c3ef40567e84638ade4e29d7

--- a/membalancer/Makefile
+++ b/membalancer/Makefile
@@ -16,7 +16,7 @@ HEAP_USER := heap_user.o
 TPOOL := thread_pool.o
 PROCESS_STATS := processtats_user.o
 GETPADDR:= getpaddr.o
-LIBS  := ${LIBBPF}/src/libbpf.so -lz -lelf -lnuma -lpthread
+LIBS  := ${LIBBPF}/src/libbpf.so -lz -lelf -lnuma -lpthread -lrt
 DEFS = -DMEMBALANCE_FORK
 #DEFS = -DUSE_PAGEMAP
 #DEFS = -DCCMD_SOFTWARE_SAMPLING
