--- a/membalancer/Makefile
+++ b/membalancer/Makefile
@@ -3,6 +3,7 @@ LIBBPF = <..>/libbpf
 CLANG ?= clang
 LLC ?= llc
 MODULE   := membalancer
+CPU_TYPE := -DCPU_AMD_X8664
 BIN_USER := ${MODULE}_user.o
 LIB := ${MODULE}_lib.o
 BIN_NUMA := ${MODULE}_numa.o
@@ -17,7 +18,7 @@ TPOOL := thread_pool.o
 PROCESS_STATS := processtats_user.o
 GETPADDR:= getpaddr.o
 LIBS  := ${LIBBPF}/src/libbpf.so -lz -lelf -lnuma -lpthread -lrt
-DEFS = -DMEMBALANCE_FORK
+DEFS = -DMEMBALANCE_FORK ${CPU_TYPE}
 #CPU_MIG_DEF = -DCPU_LEVEL_MIG
 #DEFS = -DUSE_PAGEMAP
 #DEFS = -DCCMD_SOFTWARE_SAMPLING
@@ -28,35 +29,36 @@ USR_INCLUDE := -I. \
 	-I${KDIR}/tools/testing/selftests/bpf/ \
 	-I${LIBBPF}/src \
 	-I${LIBBPF}/include \
-	-I../include/common/ \
-	-I../include/amd \
+	-I../include/ \
+	-I../include/common/
 
-all:   ${BIN_TRACER} ${BIN_NUMA} ${BIN_UTILS} ${BIN_TIER} ${HEAP_USER} \
-	${PROCESS_STATS} ${HEAP} ${BIN_MIGRATE} ${GETPADDR} ${TPOOL}\
-	${MEMSTATS_USER} ${LIB} ${BIN_USER}
+all:   ${BIN_TRACER} ${BIN_NUMA} ${BIN_UTILS} ${BIN_TIER} \
+	${HEAP_USER} ${BIN_MIGRATE} ${GETPADDR} ${TPOOL} \
+	${MEMSTATS_USER} ${LIB} ${PROCESS_STATS} ${BIN_USER}
 
 getpaddr.o: getpaddr.c
 	$(CLANG) -c $<  ${USR_INCLUDE}
 memstats_user.o: memstats_user.c
-	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large
-processtats_user.o: processtats_user.c
-	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large
+	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large ${CPU_TYPE}
 %_numa.o: %_numa.c
-	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large
+	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large ${CPU_TYPE}
 %_tier.o: %_tier.c
-	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large
+	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large ${CPU_TYPE}
 %_tracer.o: %_tracer.c
-	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large
+	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large ${CPU_TYPE}
 %_utils.o: %_utils.c
-	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large ${CPU_MIG_DEF}
+	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large ${CPU_MIG_DEF} \
+	${CPU_TYPE}
 %_migrate.o: %_migrate.c
-	$(CLANG) -c $<  ${USR_INCLUDE} ${CPU_MIG_DEF}
+	$(CLANG) -c $<  ${USR_INCLUDE} ${CPU_MIG_DEF} ${CPU_TYPE}
 heap_user.o: heap_user.c
-	$(CLANG) -c $<  ${USR_INCLUDE}
+	$(CLANG) -c $<  ${USR_INCLUDE} ${CPU_TYPE}
 thread_pool.o: thread_pool.c
-	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large
+	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large ${CPU_TYPE}
 %_lib.o: %_lib.c
-	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large
+	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large ${CPU_TYPE}
+processtats_user.o: processtats_user.c
+	$(CLANG) -c $<  ${USR_INCLUDE} -mcmodel=large ${CPU_TYPE}
 %_user.o: %_user.c
 	$(CLANG) \
 	./membalancer_numa.o \
@@ -65,11 +67,11 @@ thread_pool.o: thread_pool.c
 	./membalancer_utils.o \
 	./membalancer_migrate.o \
 	./memstats_user.o \
-	./getpaddr.o \
 	./heap_user.o \
-	./processtats_user.o \
+	./getpaddr.o \
 	./thread_pool.o \
 	./membalancer_lib.o \
+	./processtats_user.o \
 	$<  ${USR_INCLUDE} -o ${MODULE} \
 	${LIBS} ${DEFS} -Wall -mcmodel=large
 clean:
