revert make file changes
Change-Id: Idba134087af97f804538d8cd803102fca396388f

--- a/membalancer/Makefile
+++ b/membalancer/Makefile
@@ -1,7 +1,5 @@
-#KDIR ?= <..>/linux-5.19
-#LIBBPF = <..>/libbpf
-KDIR ?= /usr/src/kernels/5.10.23+
-LIBBPF = /home/satyan/libbpf
+KDIR ?= <..>/linux-5.19
+LIBBPF = <..>/libbpf
 CLANG ?= clang
 LLC ?= llc
 MODULE   := membalancer
