BPF CORE feature and misc changes
Change-Id: If25b21a7f8520a63fa20fb8c903e96e99e0f801d

--- a/kernel/common/Makefile
+++ b/kernel/common/Makefile
@@ -1,4 +1,3 @@
-KDIR ?= <..>/linux-5.19
 LIBBPF = <..>/libbpf
 CLANG ?= clang
 LLC ?= llc
@@ -8,24 +7,15 @@ BIN_KERN := ${MODULE}_kern.o
 CPU_TYPE := -DCPU_AMD_X8664
 #DEFS = -DUSE_PAGEMAP
 #DEFS = -DCCMD_SOFTWARE_SAMPLING
+VMLINUX := ../../include/arch/$(ARCH)/
 
 CLANG_FLAGS = -I. \
 	-I../../include/ \
 	-I../../include/common \
 	-I../../include/amd \
-	-include $(KDIR)/include/linux/kconfig.h \
 	-I../kernel \
-	-I$(KDIR)/include \
-	-I$(KDIR)/tools/lib \
-	-I$(KDIR)/include/uapi \
-	-I$(KDIR)/include/generated/uapi \
-	-I$(KDIR)/arch/$(ARCH)/events \
-	-I$(KDIR)/arch/$(ARCH)/include \
-	-I$(KDIR)/arch/$(ARCH)/include/generated \
-	-I$(KDIR)/arch/$(ARCH)/include/uapi \
-	-I$(KDIR)/arch/$(ARCH)/include/generated/uapi \
-	-I$(KDIR)/tools/testing/selftests/bpf/ \
 	-I${LIBBPF}/src \
+	-I$(VMLINUX) \
 	-D__KERNEL__ -D__BPF_TRACING__ -Wno-unused-value -Wno-pointer-sign \
 	-DCC_USING_FENTRY ${CPU_TYPE} \
 	-D__TARGET_ARCH_$(ARCH) -Wno-compare-distinct-pointer-types \
@@ -36,7 +26,8 @@ CLANG_FLAGS = -I. \
 
 all:   $(BIN_KERN)
 %_kern.o: %_kern.c
-	$(CLANG) $(CLANG_FLAGS) -c $< -o - -Wall| \
+	$(CLANG) $(CLANG_FLAGS) -target bpf -c $< -o - -Wall| \
 		$(LLC) -march=bpf -mcpu=$(CPU) -filetype=obj -o ../../bin/$@
+
 clean:
 	rm -f *.o ../../bin/${MODULE}_kern.o
